--- a/index.html
+++ b/index.html
@@ -52,7 +52,23 @@
         Watch videos on <a href="https://www.youtube.com" target="_blank">YouTube</a><br>
         Learn code at <a href="https://www.freecodecamp.org" target="_blank">freeCodeCamp</a>
     </p>
-
+    <table border="2">
+        <tr>
+            <th>monday</th>
+            <th>tuesday</th>
+            <th>wednesday</th>
+        </tr>
+        <tr>
+            <td>CCL3</td>
+            <td>SLT2</td>
+            <td>CLR5</td>
+        </tr>
+        <tr>
+            <td>NETWORK SECURITY</td>
+            <td>DATABASE</td>
+            <td>IS FRAMEWORK</td>
+        </tr>
+    </table>
 </body>
 
 </html>
